--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 aresponses = "^1.1.1"
+black = "^19.10b0"
 flake8 = "^3.7.9"
 mypy = "^0.740"
 pre-commit = "^1.20.0"
