Add breaking changes to Release Drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,8 @@
 ---
 categories:
+  - title: "🚨 Breaking Change"
+    labels:
+      - "breaking change"
   - title: "🚀 Features"
     labels:
       - "enhancement"
