--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,6 +1,6 @@
-aiohttp>=3.7.4
+aiohttp>=3.7.4post0
 aresponses==1.1.2
 backoff==1.11.1
 pytest-aiohttp==0.3.0
 pytest-cov==2.8.1
-pytest==5.4.1
+pytest==6.2.5
