Add ability to disable and enable retry logic

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,9 @@
+[report]
+exclude_lines =
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError
+    # Don't include lines that are specifically in place for type-checking:
+    TYPE_CHECKING
+
 [run]
 source = pyiqvia
