--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,9 +61,13 @@ classifiers = [
 [tool.poetry.dependencies]
 aiohttp = ">=3.8.0"
 backoff = ">=1.11.1"
+certifi = ">=2023.07.22"
 python = "^3.9.0"
+setuptools = ">=65.5.1"
 
 [tool.poetry.group.dev.dependencies]
+GitPython = ">=3.1.32"
+Pygments = ">=2.15.0"
 aresponses = "^2.1.6"
 bandit = "^1.7.4"
 black = ">=22.10,<24.0"
@@ -81,6 +85,7 @@ pytest-aiohttp = "^1.0.0"
 pytest-asyncio = ">=0.20.1,<0.22.0"
 pytest-cov = "^4.0.0"
 pyupgrade = "^3.1.0"
+requests = ">=2.31.0"
 ruff = ">=0.0.261,<0.0.285"
 safety = "^2.3.1"
 vulture = "^2.6"
