--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,18 +51,19 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
 [tool.poetry.dependencies]
-aiohttp = ">=3.8.0"
+aiohttp = ">=3.9.0b0"
 backoff = ">=1.11.1"
 certifi = ">=2023.07.22"
-python = "^3.9.0"
+python = ">=3.10,<=3.12"
+yarl = ">=1.9.2"
 
 [tool.poetry.group.dev.dependencies]
 GitPython = ">=3.1.35"
@@ -84,9 +85,11 @@ pytest-aiohttp = "^1.0.0"
 pytest-asyncio = ">=0.20.1,<0.22.0"
 pytest-cov = "^4.0.0"
 pyupgrade = "^3.1.0"
+pyyaml = "^6.0.1"
 requests = ">=2.31.0"
 ruff = ">=0.0.261,<0.0.293"
 safety = "^2.3.1"
+typing-extensions = "^4.8.0"
 vulture = "^2.6"
 yamllint = "^1.28.0"
 
