Fix issue with incorrect Python version spec

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ classifiers = [
 aiohttp = ">=3.9.0b0"
 backoff = ">=1.11.1"
 certifi = ">=2023.07.22"
-python = ">=3.10,<=3.12"
+python = "^3.10"
 yarl = ">=1.9.2"
 
 [tool.poetry.group.dev.dependencies]
